[workspace]
resolver = "2"
members = ["squirrel"]

[workspace.dependencies]
# squirrel 直接需要的依赖
zstd = "0.13.3"
rmp-serde = "1.3.0"
toml = "0.9.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = {version = "0.4.42", features = ["serde"] }
clickhouse = { version = "0.13.3" , features = ["inserter"]}
indicatif = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false