[workspace]
resolver = "2"
members = [ "misaka_signal","squirrel", "syncer", "utils"]

[workspace.dependencies]
# squirrel 直接需要的依赖
zstd = "0.13.3"
rmp-serde = "1.3.0"
toml = "0.9.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = {version = "0.4.42", features = ["serde"] }
clickhouse = { version = "0.13.3" , features = ["inserter"]}
indicatif = "0.18"
anyhow = "1.0"
# Parquet相关依赖
arrow = "56.2.0"
parquet = "56.2.0"
tempfile = "3.23.0"
serde_arrow = { version = "0.13.6", features = ["arrow-56"] }
tweezers = { git = "ssh://git@github.com/xywsxp/academy_city_v3.git" }
common = { git = "ssh://git@github.com/xywsxp/academy_city_v3.git" }
structure = { git = "ssh://git@github.com/xywsxp/academy_city_v3.git" }
proto_lib = { git = "ssh://git@github.com/xywsxp/academy_city_v3.git" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false
