[package]
name = "misaka_network"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-nats = "0.44.2"
futures = "0.3.31"
prost = "0.14.1"
prost-types = "0.14.1"
thiserror = "2.0.17"
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
