[package]
name = "misaka_signal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
prost = "0.14.1"
prost-types = "0.14.1"
prost-build = "0.14.1"
rmp-serde.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.17"
toml.workspace = true
tonic = "0.14.2"
tonic-prost = "0.14.2"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
common = { workspace = true }
proto_lib = { workspace = true }
utils = { path = "../utils" }
clap = { version = "4.5.49", features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
