[package]
name = "squirrel"
version = "0.1.0"
edition = "2024"

[dependencies]
tweezers = { git = "ssh://git@github.com/xywsxp/academy_city_v3.git" }
common = { git = "ssh://git@github.com/xywsxp/academy_city_v3.git" }
structure = { git = "ssh://git@github.com/xywsxp/academy_city_v3.git" }
zstd = { workspace = true }
rmp-serde = { workspace = true }
toml.workspace = true
serde = { workspace = true }
serde_path_to_error = "0.1.20"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
chrono = { workspace = true }
clickhouse = { workspace = true }
indicatif.workspace = true

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
