[package]
name = "syncer"
version = "0.1.0"
edition = "2024"

[dependencies]
clickhouse.workspace = true
serde.workspace = true
serde_arrow.workspace = true
arrow.workspace = true
parquet.workspace = true
tokio.workspace = true
chrono.workspace = true
toml.workspace = true
clap = { version = "4.5", features = ["derive"] }
utils = { path = "../utils" }

[dev-dependencies]
tempfile.workspace = true
