[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
clickhouse.workspace = true
proto_lib = { workspace = true }
common = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rmp-serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_arrow = { workspace = true, features = ["arrow-56"] }
arrow.workspace = true

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"

[[bench]]
name = "transaction_conversion_benchmark"
harness = false
